Base64类更名为Base64Tool
Base64Tool从sun.misc.BASE64Encoder更换为java.util.Base64进行base64编码，此jar在1.8后添加