@@ -1,15 +1,15 @@
 package com.linjiahao.security.tools;
 
 import org.thymeleaf.util.StringUtils;
-import sun.misc.BASE64Encoder;
 
 import javax.imageio.ImageIO;
 import java.awt.image.BufferedImage;
 import java.io.ByteArrayOutputStream;
 import java.io.File;
 import java.io.IOException;
+import java.util.Base64;
 
-public class Base64 {
+public class Base64Tool {
     public enum Type {
         ImageType;
     }
@@ -17,20 +17,20 @@ public class Base64 {
     //当不为null时，即为用户最后设置。如若用户设置了其他项目，需要将此值清空
     private byte[] bytes = null;
 
-    public Base64() {
+    public Base64Tool() {
     }
 
-    public Base64 setBytes(byte[] bytes) {
+    public Base64Tool setBytes(byte[] bytes) {
         this.bytes = bytes;
         return this;
     }
 
-    public Base64 setByteArrayOutputStream(ByteArrayOutputStream byteArrayOutputStream) throws IOException {
+    public Base64Tool setByteArrayOutputStream(ByteArrayOutputStream byteArrayOutputStream) throws IOException {
         bytes = byteArrayOutputStream.toByteArray();
         return this;
     }
 
-    public Base64 setBufferedImage(BufferedImage bufferedImage, String type) throws IOException {
+    public Base64Tool setBufferedImage(BufferedImage bufferedImage, String type) throws IOException {
         ByteArrayOutputStream bos = new ByteArrayOutputStream();
         ImageIO.write(bufferedImage, type, bos);
         setByteArrayOutputStream(bos);
@@ -38,7 +38,7 @@ public class Base64 {
         return this;
     }
 
-    public Base64 setFile(File file, Type type) throws IOException {
+    public Base64Tool setFile(File file, Type type) throws IOException {
         String path = file.getAbsolutePath();
         switch (type) {
             case ImageType:
@@ -60,8 +60,8 @@ public class Base64 {
 
     public String encodeBase64() throws Exception {
         byte[] imageBytes = getByte();
-        BASE64Encoder encoder = new BASE64Encoder();
-        return encoder.encode(imageBytes);
+        Base64.Encoder encoder = Base64.getEncoder();
+        return encoder.encodeToString(imageBytes);
     }
 
 }
